--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jquery": "^3.6.0",
     "jsdom": "^20.0.0",
     "mongoose": "^5.13.14",
+    "multer": "^1.4.5-lts.1",
     "multiparty": "^4.2.3",
     "popups": "^1.1.3"
   },
